CSS: Prevent nav bar height overflow

--- a/traffy-web/app/static/css/style.css
+++ b/traffy-web/app/static/css/style.css
@@ -1182,6 +1182,7 @@ a .switch {
 
 .switch-label {
   display: inline-block;
-  height: 24px;
-  line-height: 24px;
+  text-align: center;
+  position: relative;
+  top: 2px;
 }
